# RHCL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml  manual_registration.cpp  流程图.ppt
RHCL/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraBase.cpp  CameraBase.hpp  CameraFactory.hpp  CameraFactory.hpp.in  Correction.cpp  Freenect.hpp  ICamera.hpp  Kinect2.cpp  Kinect2.h  Link.cpp  Link.h  MSKinect.hpp  Model.cpp  Model.h  Point.cpp  Point.hpp  RHCL.cpp  Registration.cpp  Registration.h  k2g.hpp
RHCL/include/: Camera.hpp  Correction.hpp  Kinect2.hpp  Model.hpp  RHCL.hpp  Registration.hpp
RHCLVisualizer/: CMakeLists.txt  RHCLVisualizer.cpp  RHCLVisualizer.h  RHCLVisualizer.ui  main.cpp  myvtkopenglwidget.cpp  myvtkopenglwidget.h  myvtkopenglwidget.ui  mywidget.cpp  mywidget.h  mywidget.ui  res.qrc
include/: Camera.h  Correction.h  Link.h  Link.hpp  Model.h  Model.hpp  Point.hpp  k2g.hpp
res/iiwa/: config.yaml  config_backup.yaml
res/staubli_tx60l/: config.yaml
res/ur5e/: base.stl  config.yaml  forearm.stl  forearm_add.dae  forearm_add.stl  shoulder.stl  upperarm.stl  upperarm_add.dae  upperarm_add.stl  wrist1.stl  wrist2.stl  wrist3.stl
src/: Link.cpp  Model.cpp  Point.cpp
test/: CMakeLists.txt  manual_registration.cpp  test.cpp  test_ICamera.cpp  test_kinect.cpp  test_yaml.cpp
